--- a/test/browser.html
+++ b/test/browser.html
@@ -2,7 +2,7 @@
 <html lang="en-AU">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <title>CSS transforms</title>
 <style>
 *{
@@ -19,17 +19,19 @@ html, body{
 	left:   0;
 	right:  0;
 	background: rgba(255, 255, 255, 0.8);
-	z-index: 2;
+	z-index: 3;
 }
 label{
 	display: block;
 }
 #a, #b{
 	position: absolute;
+	transition: .3s ease all;
 	transform-origin: 0 0;
 	font-size: 100px;
 	width:  1em;
 	height: 1em;
+	z-index: 1;
 }
 #a{
 	background: rgba(255, 0, 0, 0.25);
@@ -39,6 +41,19 @@ label{
 	background: rgba(0, 0, 255, 0.25);
 	outline: 1px solid rgba(0, 0, 255, 0.75);
 }
+.v{
+	position: absolute;
+	width:  1em;
+	height: 1em;
+	top:    0;
+	left:   0;
+	margin: -.5em 0 0 -.5em;
+	background: #0a0;
+	box-shadow: inset 0 0 1em #000;
+	transition: .3s ease all;
+	border-radius: 50%;
+	z-index: 2;
+}
 </style>
 </head>
 
@@ -47,12 +62,17 @@ label{
 	<div id="a"></div>
 	<div id="b"></div>
 
+	<div class="v"></div>
+	<div class="v"></div>
+	<div class="v"></div>
+	<div class="v"></div>
+
 	<form id="controls">
 		<label>Pan X:    <input type="number" id="pan-x" value="0" /></label>
 		<label>Pan Y:    <input type="number" id="pan-y" value="0" /></label>
 		<label>Zoom:     <input type="number" id="zoom"  value="1" /></label>
-		<label>Origin X: <input type="number" id="origin-x" value="0"></label>
-		<label>Origin Y: <input type="number" id="origin-y" value="0"></label>
+		<label>Origin X: <input type="number" id="origin-x" value="0"/></label>
+		<label>Origin Y: <input type="number" id="origin-y" value="0"/></label>
 	</form>
 
 	<script src="../pan-and-zoom.js"></script>
